# NotAlone

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Arhitecture1.md  CLAUDE.md  Makefile  README.md  SPRINT1_SUMMARY.md  SPRINT1_TEST_REPORT.md  SPRINT4_SUMMARY.md  SPRINTS.md  Sprint2.md  Sprint3.md  Sprint4.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
apps/ai_coach/: __init__.py  anonymize.py  main.py  provider.py
apps/api/: deps.py  main.py
apps/api/middlewares/: metrics.py
apps/api/routers/: chat.py  health.py  (+5 more)
apps/bot/: api_client.py  bot.py  deps.py  redis.py
apps/workers/: match_worker.py  notifier.py
core/: __init__.py  auth.py  config.py  db.py  metrics.py  redis.py  security.py
deploy/: compose.yml
deploy/docker/: api.Dockerfile  bot.Dockerfile  worker.Dockerfile
migrations/: env.py
migrations/versions/: 0bf07bfbb0e1_add_recentcontact_model_and_match_.py  20251002_001_seed_topics.py  20251002_003_add_u_lo_u_hi_to_match.py  20251002_initial_migration.py  20251003_004_add_msg_counts_to_chat_sessions.py  20251003_006_fix_unique_match_rematch.py  20251005_001_sprint5_safety.py  20251005_002_add_recent_contacts_fk.py  d156e58a8030_add_tips_payment_fields.py
models/: __init__.py  ai.py  chat.py  match.py  recent_contact.py  safety.py  tip.py  topic.py  user.py
scripts/: check_user_topics.py  send_test_message.py  set_bot_commands.py
tests/unit/: test_placeholder.py
(+16 files in other folders)
